--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   padding: 2rem;
   height: 100vh;
-  background-color: blanchedalmond;
+  background-color: blue;
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgb(151, 192, 208);
   min-width: 400px;
