--- a/main.css
+++ b/main.css
@@ -3,16 +3,21 @@ body {
   height: 40vh;
   background-color: blue;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #eef0f3;
+  background-color: #e5e3e3;
   /* background-color: rgb(151, 192, 208); */
   min-width: 400px;
+}
+.title {
+  font-family: didot;
+  font-size: 24px;
+  letter-spacing: 2px;
 }
 
 .input {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  border: 1px solid grey;
+  border-color: transparent;
 }
 
 .title {
@@ -42,13 +47,18 @@ body {
 
 .completed {
   background-color: coral;
+  color: red;
 }
 
 .delete-btn {
-  background-color: #d7b5ae;
+  background-color: #be928a;
   /* #ee4e34; */
   /* #cd8f32; */
 }
 .add-btn {
   background-color: rgb(127, 174, 149);
+}
+
+.checkbox-style {
+  border-style: none;
 }
